--- a/index.html
+++ b/index.html
@@ -40,6 +40,40 @@
         from { opacity: 0; transform: translateY(10px); }
         to { opacity: 1; transform: translateY(0); }
       }
+      
+      /* subtle character animations */
+      @keyframes breathe {
+        0%, 100% { transform: scale(1); }
+        50% { transform: scale(1.03); }
+      }
+      @keyframes float {
+        0%, 100% { transform: translateY(0px); }
+        50% { transform: translateY(-8px); }
+      }
+      .animate-breathe {
+        animation: breathe 7s ease-in-out infinite;
+      }
+      .animate-float {
+        animation: float 6s ease-in-out infinite;
+      }
+
+      /* Checkmark animations */
+      @keyframes scaleIn {
+        from { transform: scale(0.5); opacity: 0; }
+        to { transform: scale(1); opacity: 0.7; }
+      }
+      .animate-scale-in {
+        animation: scaleIn 0.3s ease-out forwards;
+      }
+      
+      @keyframes checkPop {
+        0% { transform: scale(0.5); opacity: 0; }
+        50% { transform: scale(1.4); }
+        100% { transform: scale(1); opacity: 1; }
+      }
+      .animate-check-pop {
+        animation: checkPop 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+      }
     </style>
   <script type="importmap">
 {
